# flask-svelte

./: .gitignore  LICENSE  README.md  pyproject.toml
flask_svelte/: __init__.py  main.py
flask_svelte/data/: sample-app.py  sample-package.json  sample-rollup.config.js  sample-tailwind.config.js  template.html
flask_svelte/data/svelte-app/: App.svelte  main.js
